--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,7 @@ anyhow = "1.0.56"
 [dev-dependencies]
 test-case = "2.0.0"
 criterion = "0.3.5"
+
+[[bench]]
+name = "my_benchmark"
+harness = false
