--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ lazy-regex = "2.3.0"
 thiserror = "1.0.30"
 anyhow = "1.0.56"
 text_io = "0.1.10"
-aoc_utils = { path = "aoc_utils"}
+aoc_utils = { path = "./aoc_utils"}
 
 [dev-dependencies]
 test-case = "2.0.0"
