--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,16 +6,17 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-regex = "1"
-lazy-regex = "2.3.0"
-thiserror = "1.0.30"
-anyhow = "1.0.56"
-text_io = "0.1.10"
+regex = "^1"
+lazy-regex = "^2.3.0"
+thiserror = "^1.0.30"
+anyhow = "^1.0.56"
+text_io = "^0.1.10"
 aoc_utils = { path = "./aoc_utils"}
+fnv = "^1.0"
 
 [dev-dependencies]
-test-case = "2.0.0"
-criterion = "0.3.5"
+test-case = "^2.0.0"
+criterion = "^0.3.5"
 
 [[bench]]
 name = "ex15benchmark"
