--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ text_io = "^0.1.10"
 aoc_utils = { path = "./aoc_utils"}
 fnv = "^1.0"
 itertools = "^0.10.3"
+either = "^1.7.0"
 
 [dev-dependencies]
 test-case = "^2.0.0"
