--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ lazy-regex = "^2.3.0"
 thiserror = "^1.0.30"
 anyhow = "^1.0.56"
 text_io = "^0.1.10"
-aoc_utils = { path = "./aoc_utils"}
+aoc_utils = { path = "../aoc_utils"}
 fnv = "^1.0"
 itertools = "^0.10.3"
 either = "^1.7.0"
